2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.tcl: Accepted the patch in report [#718985] for a more
	  robust 'GetEvent' routine. Provided by Donal Fellows
	  <dkf@users.sourceforge.net>.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* irc.man:
	* irc.tcl:  Fixed bug #614591. Set version of the package to
	  to 0.3 throughout. Was insonsistent.

2003-01-25  David N. Welton  <davidw@dedasys.com>

	* irc.tcl: Added Tcl requirement to package itself.

2003-01-24  David N. Welton  <davidw@dedasys.com>

	* pkgIndex.tcl: Added dependency on Tcl 8.3 in the pkgIndex.tcl
	  file.  I'm not sure that this code won't work with earlier
	  versions of Tcl, but 8.3 is all I have to test against.  Please
	  let me know if you successfully run it with earlier versions.
	  Fixes [674331].

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.man: More semantic markup, less visual one.

2003-01-08  David N. Welton  <davidw@dedasys.com>

	* irc.tcl: Make sure 'api' commands return strings, not lists.
	  (DispatchServerEvent): Add a missing join, to keep

2002-12-16  David N. Welton  <davidw@dedasys.com>

	* irc.tcl: Use 'logger' package for error/debug reporting.
	  Cleanups with regards to possible 'bgerror' situations (network
	  input/output).  Bumped version number to 0.3.

2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.man: Added doctools manpage.

2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.tcl: Frink run.

	* irc: Version is now 0.2 to distinguish this from the code in
	  tcllib release 1.2

2001-11-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.n:
	* irc.tcl: Applied patch #481477.