@@ -9,4 +9,4 @@
 # full path name of this file's directory.
 
 if { ![package vsatisfies [package provide Tcl] 8.3] } { return }
-package ifneeded irc 0.3 [list source [file join $dir irc.tcl]]
+package ifneeded irc 0.4 [list source [file join $dir irc.tcl]]
